prevent scrollbars from showing up on non-scrollable axis on PC

--- a/src/js/components/InstructionsOverlay/style.scss
+++ b/src/js/components/InstructionsOverlay/style.scss
@@ -17,7 +17,8 @@
     background: var(--jhu-grayscale-0);
     border: 1.5em solid var(--jhu-grayscale-0);
     box-sizing: border-box;
-    overflow: scroll;
+    overflow-x: hidden;
+    overflow-y: auto;
     padding: 1em;
     max-height: 80%;
     width: 80%;
