--- a/src/js/components/Legend/style.scss
+++ b/src/js/components/Legend/style.scss
@@ -6,7 +6,8 @@ $iconRatio: 0.4;
   .legend-container {
     display: flex;
     flex: 1;
-    overflow: auto;
+    overflow-x: auto;
+    overflow-y: hidden;
   }
 
   .legend {
